--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   riverpod_annotation: ^2.3.3
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  fl_chart: ^0.66.0
+  fl_chart: ^0.65.0
   intl: ^0.19.0
   google_fonts: ^6.1.0
   flutter_animate: ^4.5.0
@@ -51,6 +51,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   http: ^1.1.0
   logging: ^1.2.0
+  hooks_riverpod: ^2.4.9
 
 dev_dependencies:
   flutter_test:
