--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   http: ^1.1.0
   logging: ^1.2.0
   hooks_riverpod: ^2.4.9
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
